<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_secondary"
    tools:context="HomeFragment">


    <TextView
        android:id="@+id/home_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inicio"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/pet_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_de_la_mascota_creado"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/home_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/pet_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/porci_n_de_comida_creada"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/pet_name"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp" />

    <Button
        android:id="@+id/edit_pet_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editar"
        app:layout_constraintTop_toBottomOf="@id/pet_food"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp" />

    <Button
        android:id="@+id/delete_pet_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eliminar"
        app:layout_constraintTop_toBottomOf="@id/pet_food"
        app:layout_constraintStart_toEndOf="@id/edit_pet_button"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
